--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
                         Love u forever and ever.<br/>
                         <div class="signature">- boyname</div>
                     </div> -->
-                    <img src="">
+                    <img src="colorful.png" onload='if (this.width>190 || this.height>257) if (this.width/this.height>190/257) this.width=190; else this.height=257;'>
+                </div>
+                    <div id="loveu">
+                                诗是抄的，<br/>
+                                但爱你的心是真的。<br/>
+                        <div class="signature">- 林哥哥</div>
+                    </div>
                 </div>
             </div>
         </div>
