--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="" xml:lang="en" lang="en">
 <head>
-    <title>Our Love Story-Download by http://www.codefans.net</title>
+    <title>不止一周</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <style type="text/css">
         @font-face {
